修改启动方式
